--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "technical-tes-seal",
+  "name": "jobify",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -22,6 +22,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prisma": "^6.3.0"
   }
 }
